--- a/swagger/django-proxy.conf
+++ b/swagger/django-proxy.conf
@@ -38,9 +38,12 @@
       }
 
       location /api/ {
-        proxy_pass http://laba-6-django:8000;
         proxy_redirect off;
-        proxy_set_header HOST $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; 
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header HOST $http_host;
+        proxy_pass http://laba-6-django:8000;
     }
 
       include templates/cors.conf;
