--- a/compose.yml
+++ b/compose.yml
@@ -8,8 +8,8 @@ services: # корневое имя параметра, в котором пер
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-    # ports: # пробрасываем порт из контенера во вне. порт_компа:порт_внутри_контенера
-    #   - "5432:5432" # только для разработки в других случаях убрать доступ к базе данных из вне
+    ports: # пробрасываем порт из контенера во вне. порт_компа:порт_внутри_контенера
+      - "5432:5432" # только для разработки в других случаях убрать доступ к базе данных из вне
 
   laba-6-django: # произвойльное имя контенера. на уровне файла конфигурации 
     container_name: laba-6-django # указываем имя контенера для отобьражения в докере
